language/move-lang/tests/move_check/unit_test/test_filter_function.exp
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/unit_test/test_filter_function.move:6:24
  │
6 │     public fun foo() { bar() }
  │                        ^^^ Unbound function 'bar' in current scope

